Corrected extra whitespace issue

--- a/src/Components/Project/Project.css
+++ b/src/Components/Project/Project.css
@@ -49,6 +49,7 @@
 .ContentPanel {
     /* height: 80vh; */
     max-height: 100vh;
+    max-width: 100vw;
     background: #ffEAD2;
     color: #002A3B;
     display: flex;
